Adding pojo implementation for config setup.